# Qt_Learn

./: README.md
10_QEvent/: 10_QEvent.pro  mylabel.cpp  mylabel.h  widget.cpp  widget.h  widget.ui
11_QPainter/: 11_QPainter.pro  widget.cpp  widget.h  widget.ui
12_QPainterDevice/: 12_QPainterDevice.pro  widget.cpp  widget.h
12_QPainterDevice/Image/: i.qrc  image.qrc
13_QtQFile/: 13_QtQFile.pro  13_QtQFile.pro.user.4.8-pre1  myfile.txt  widget.cpp  widget.ui
14_simple_project_CoinFlip/: 14_simple_project_CoinFlip.pro.user.4.8-pre1  chooselevelscene.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mypushbutton.cpp  mypushbutton.h  playsence.cpp  playsence.h
15_cmake_qt_conda/: 14_simple_project_CoinFlip.pro  CMakeLists.txt  build.bat  chooselevelscene.cpp  chooselevelscene.h  mainwindow.cpp  mycoin.cpp  mycoin.h  playsence.cpp  playsence.h
1_duixangshu_btn_signal_slot_Lambda/: 1_duixangshu_btn_signal_slot_Lambda.pro  1_duixangshu_btn_signal_slot_Lambda.pro.user.4.8-pre1  mainwindow.cpp  mainwindow.h  mypushbutton.cpp  mypushbutton.h  studen.cpp  studen.h  teacher.h
2_Mainwindow/: 2_Mainwindow.pro  mainwindow.cpp
3_QDialog/: 3_QDialog.pro  3_QDialog.pro.user.4.8-pre1  mainwindow.cpp  mainwindow.ui
4_layout/: 4_layout.pro  4_layout.pro.user.4.8-pre1  mainwindow.ui
5_control/: 5_control.pro  5_control.pro.user.4.8-pre1  widget.cpp  widget.ui
5_control/Image/: image.qrc
6_Qt_WidegtTree/: 6_Qt_WidegtTree.pro  CMakeLists.txt  widget.cpp  widget.ui
7_tabelWidget/: 7_tabelWidget.pro  widget.cpp  widget.ui
8_otherControl/: 8_otherControl.pro  widget.cpp  widget.ui
9_smallWidget_selfControl/: 9_smallWidget_selfControl.pro  smallwaiget.cpp  smallwaiget.h  smallwaiget.ui  widget.cpp  widget.ui
(+1 files in other folders)
